--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="study_notes">Notes</string>
     <string name="study_fullscreen">fullscreen</string>
     <string name="study_add_notes">Add new note</string>
+    <string name="study_edit_note">Edit note</string>
     <string name="study_view_detail">Study History</string>
     <string name="study_view_notes">View Notes</string>
     <string name="study_notes_loading">Loading notes&#8230;</string>
@@ -76,12 +77,12 @@
     <string name="study_loading_vimeo_video">Loading Vimeo Video</string>
     <string name="study_load_notes_error">Notes loading error : %s</string>
     <string name="study_save_notes_error">Notes saving error : %s</string>
-    <string name="study_note_hint">Input your note here</string>
+    <string name="study_note_hint">Your Note</string>
     <string name="study_note_time">Time</string>
     <string name="study_note">Note</string>
     <string name="study_note_del_confirm">Are you sure you want to delete this note ?</string>
     <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
-    <string name="search_result_count">Find %s matching results</string>
+    <string name="search_result_count">About %s results</string>
     <string name="title_activity_study">StudyActivity</string>
     <string name="title_activity_edit_note">EditNoteActivity</string>
     <string name="title_activity_know_info">KnowInfoActivity</string>
